crates/toml/tests/snapshots/invalid/array/no-comma-01.stderr
TOML parse error at line 1, column 16
  |
1 | no-comma-01 = [true false]
  |                ^^^^^^^^^^
string values must be quoted, expected literal string
